초기작업 (수정필요)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site
 repository: gorb6593/gorb6593.github.io
-# favicon: images/favicon.ico
 
 # Content configuration version
 version: 2
@@ -22,7 +21,7 @@ github_username: gorb6593
 additional_links:
   - title: Blog
     icon: fas fa-blog
-    url: https://harrystroy.tistory.com/
+    url: https://harrystroy.tistory.com
 
 # About Section
 about_profile_image: images/profile.jpg
@@ -32,27 +31,28 @@ about_content: |
   요양 플랫폼(기웅정보통신), 세무 플랫폼(리드넘버, 쌤157), 교육 플랫폼(챔프스터디)에서 **특정 시즌에 집중되는 대규모 트래픽** 환경에서 서버 개발을 진행했습니다.
   다양한 언어와 환경에서 개발된 레거시 코드를 개선하는 것이 강점으로 그 과정에서 도메인을 빠르게 학습합니다.
 
-  기획과 소통을 당연하게 생각하며, 전 직장에서 **회원 등록 프로세스 개선으로 등록 시간 70% 단축**, **세무 신고 준비 기간 75% 단축** 등 비용 절감과 매출 증가를 기록했습니다.
-  현재는 개인 앱을 개발/운영하며 기획부터 마케팅까지 전 과정을 경험하고 있습니다.
+  기획과 소통을 당연하게 생각하며 **회원 등록 프로세스 개선으로 등록 시간 70% 단축**, **세무 신고 준비 기간 75% 단축** 등 비용 절감과 매출 증가를 기록했습니다.
+  현재 개인 앱을 개발/운영하며 기획부터 마케팅까지 전 과정을 경험하고 있습니다.
 
 content:
   - title: Experience
     layout: list
     content:
       - layout: left
-        title: 기웅정보통신(주)
+        title: 기웅정보통신
         link: https://www.kwic.co.kr/main.do
         caption: 2025.03 ~ 현재
         description: |
-          요양 서비스 플랫폼
+          요양 서비스 플랫폼 (일일 활성 사용자 X,XXX명, 월 XX만 건 API 요청)
 
           **이지케어 앱 신규개발** (2025.12 ~ 2026.01)
           - 레거시 Flutter 앱을 최신화하고 기존 웹뷰 페이지 개선작업
           - 앱 고유 기능(푸시 알림, 카메라 등) 활성화 및 UX 개선
+          - FCM 기반 푸시 알림 시스템 구축, 앱 로딩 속도 XX% 개선
 
           **요양 시스템 전면 리뉴얼** (2025.03 ~ 2025.12)
-          - **PHP → Java Spring Boot, Vue.js 전환** 마이그레이션 주도
-          - 레거시 OzReport 연동 시스템 재설계 및 안정화
+          - **PHP → Java Spring Boot, Vue.js 전환** 마이그레이션 주도 (총 XXX개 API, XX개 테이블)
+          - 레거시 OzReport 연동 시스템 재설계: 동기 → 비동기 처리로 리포트 생성 시간 XX% 단축
           - 기획 단계부터 참여하여 개발 일정 및 우선순위 조율
 
       - layout: left
@@ -60,52 +60,55 @@ content:
         link: https://readnumber.com
         caption: 2023.11 ~ 2025.02
         description: |
-          **고객수 5,000명**의 세무 서비스 플랫폼
+          **고객수 5,000명**의 세무 서비스 플랫폼 (월 XX만 건 스크래핑, 일 X,XXX건 API 호출)
 
           **부가세/종합소득세 신고 시스템 고도화** (2024.01 ~ 2024.05)
           - 홈택스/배달앱 API 연동으로 매출 데이터 **자동 수집 시스템** 구축
-          - 데이터 검증 및 전처리 자동화로 **신고 준비 기간 75% 단축** (4주 → 1주)
+          - Spring Batch 기반 데이터 검증/전처리 자동화로 **신고 준비 기간 75% 단축** (4주 → 1주)
           - 기술 스택: Java8, Spring Boot 2.1, MyBatis, MySQL, KT Cloud
 
           **신고 상황 알리미 서비스** (2024.06)
           - 종합소득세/부가가치세 신고 진행 현황 **실시간 모니터링 시스템** 구축
+          - SSE(Server-Sent Events) 기반 실시간 상태 업데이트 구현
           - 서비스 오픈 후 **누적 방문 1만회 이상** 달성 (전체 고객 4,000명 대비 250% 도달)
           - 기술 스택: Java17, Spring Boot 3.2, JPA, MySQL8, AWS
 
           **레거시 시스템 개선 및 유지보수** (2024.01 ~ 2025.02)
           - 수임동의 프로세스 자동화로 **고객 등록 시간 70% 단축**
           - 고객 상태 자동변경 배치 고도화로 **상태 관리 정확도 100%** 달성
-          - 스크래핑 서버 다중화 및 장애 대응 체계 구축
+          - 스크래핑 서버 다중화: Redis 기반 작업 큐 도입, X대 서버 로드밸런싱으로 처리량 XX% 향상
+
+          **트러블슈팅**: 신고 시즌 트래픽 폭주로 스크래핑 서버 장애 발생 → 재시도 로직 및 서킷브레이커 패턴 도입으로 장애 복구 시간 XX분 → X분으로 단축
 
       - layout: left
-        title: (주) 챔프스터디
-        link: https://www.hackers.com/
-        sub_title: 통합인프라개발팀 사원
+        title: 챔프스터디(해커스)
+        link: https://www.hackers.com
+        sub_title: 통합인프라개발팀
         caption: 2022.08 ~ 2023.12 (1년 5개월)
         description: |
-          **해커스** 교육 플랫폼
+          **해커스** 교육 플랫폼 (일일 방문자 XX만 명, 동시 접속 X,XXX명)
 
           **합격/불합격 인증 서비스 개발** (2023.01 ~ 2023.11)
-          - 자격증 시험 응시생 간 점수 비교 서비스 구축
+          - 자격증 시험 응시생 간 점수 비교 서비스 구축 (누적 참여자 X만 명)
           - 발표 전 2~3달 시점에서 합격 가능성 예측 정보 제공
           - 관리자용 사용자 정보 관리 기능 개발
 
           **모의고사 시스템 개발**
-          - 모의고사 선택 및 응시 서비스 전체 설계/개발
+          - 모의고사 선택 및 응시 서비스 전체 설계/개발 (총 XX개 과목, XXX개 문제 관리)
           - 관리자(강사)용 문제 관리 시스템 구축
-          - 응시생 데이터 비교/분석 **시각화 대시보드** 개발
+          - Chart.js 기반 응시생 데이터 비교/분석 **시각화 대시보드** 개발
 
           **통합 API 개발 및 유지보수** (2022.08 ~ 2023.11)
-          - 해커스 전체 사이트 **공통 API** 설계 및 개발
+          - 해커스 전체 사이트 **공통 API** 설계 및 개발 (XX개 사이트 연동)
           - 개정 강의 지급, 신규 쿠폰 지급 등 전 사이트 적용
-          - 다양한 이벤트(퀴즈, 선착순, 게임, 문자 참여) 시스템 개발
+          - 선착순 이벤트 동시성 처리: Redis 분산 락 적용으로 중복 지급 방지
 
       - layout: left
-        title: (주) 널리소프트
-        sub_title: 백엔드개발팀 인턴
+        title: 널리소프트
+        sub_title: 개발팀
         caption: 2022.01 ~ 2022.07 (7개월)
         description: |
-          **챗봇 서비스** 스타트업
+          **쌤157 서비스** 세금 스타트업
 
           **관리자용 통계 시스템 개발** (2022.04 ~ 2022.07)
           - 챗봇 사용자 통계 **시각화 대시보드** 개발
@@ -117,22 +120,22 @@ content:
           - 관리자 권한 테이블 설계 및 RBAC 구현
           - 권한 요청/승인 알림 시스템 개발
 
-  - title: 역량
-    layout: text
-    content: |
-      **레거시 시스템 마이그레이션**
-      - 기웅정보통신 요양 시스템 (PHP → Java Spring Boot, Vue.js) 전환 (2025)
-      - 다양한 레거시 환경에서의 점진적 개선 경험
-
-      **대용량 데이터 처리 및 자동화**
-      - 홈택스/배달앱 API 연동 매출 데이터 자동 수집 시스템 구축
-      - 배치 프로그램을 통한 데이터 검증/전처리 자동화
-      - 스크래핑 서버 다중화 및 장애 대응 체계 구축
-
-      **프로세스 개선을 통한 비용 절감**
-      - 세무 신고 준비 기간 75% 단축 (4주 → 1주)
-      - 고객 등록 시간 70% 단축
-      - 고객 상태 관리 정확도 100% 달성
+#  - title: 역량
+#    layout: text
+#    content: |
+#      **레거시 시스템 마이그레이션**
+#      - 기웅정보통신 요양 시스템 (PHP → Java Spring Boot, Vue.js) 전환 (2025)
+#      - 다양한 레거시 환경에서의 점진적 개선 경험
+#
+#      **대용량 데이터 처리 및 자동화**
+#      - 홈택스/배달앱 API 연동 매출 데이터 자동 수집 시스템 구축
+#      - 배치 프로그램을 통한 데이터 검증/전처리 자동화
+#      - 스크래핑 서버 다중화 및 장애 대응 체계 구축
+#
+#      **프로세스 개선을 통한 비용 절감**
+#      - 세무 신고 준비 기간 75% 단축 (4주 → 1주)
+#      - 고객 등록 시간 70% 단축
+#      - 고객 상태 관리 정확도 100% 달성
 
   - title: Projects
     layout: list
@@ -184,25 +187,25 @@ content:
       - JavaScript, Vue.js
       - Flutter
 
-  - title: Education
-    layout: list
-    content:
-      - layout: top-right
-        title: 한국방송통신대학교
-        sub_title: 컴퓨터과학과 (졸업)
-        caption: 2022.08 ~ 2025.07
-
-      - layout: top-right
-        title: 멀티캠퍼스
-        sub_title: 빅데이터를 활용한 IoT 시스템 개발 (6개월 과정)
-        caption: 2021.12
-        link: https://github.com/gorb6593/FinalWork
-        link_text: GitHub
-
-  - title: Certifications
-    layout: text
-    content: |
-      - **SQLD** - 한국데이터산업진흥원 (2024.06)
+#  - title: Education
+#    layout: list
+#    content:
+#      - layout: top-right
+#        title: 한국방송통신대학교
+#        sub_title: 컴퓨터과학과 (졸업)
+#        caption: 2022.08 ~ 2025.07
+#
+#      - layout: top-right
+#        title: 멀티캠퍼스
+#        sub_title: 빅데이터를 활용한 IoT 시스템 개발 (6개월 과정)
+#        caption: 2021.12
+#        link: https://github.com/gorb6593/FinalWork
+#        link_text: GitHub
+#
+#  - title: Certifications
+#    layout: text
+#    content: |
+#      - **SQLD** - 한국데이터산업진흥원 (2024.06)
 
 # Footer
 footer_show_references: true
