--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,18 @@ darkmode: false
 github_username: gorb6593
 
 # Additional icon links
-additional_links:
-  - title: Blog
-    icon: fas fa-blog
-    url: https://harrystroy.tistory.com
+#additional_links:
+#  - title: Blog
+#    icon: fas fa-blog
+#    url: https://harrystroy.tistory.com
 
 # About Section
-about_profile_image: images/profile.jpg
+#about_profile_image: images/profile.jpg
 about_content: |
   Java & Spring Boot / Vue & Javascript, AWS 기반의 **5년차 백엔드 개발자**입니다.
 
   요양 플랫폼(기웅정보통신), 세무 플랫폼(리드넘버, 쌤157), 교육 플랫폼(챔프스터디)에서 **특정 시즌에 집중되는 대규모 트래픽** 환경에서 서버 개발을 진행했습니다.
-  다양한 언어와 환경에서 개발된 레거시 코드를 개선하는 것이 강점으로 그 과정에서 도메인을 빠르게 학습합니다.
-
+  다양한 언어와 환경에서 코드를 개선하는 것이 강점으로 그 과정에서 도메인을 빠르게 학습합니다.
   기획과 소통을 당연하게 생각하며 **회원 등록 프로세스 개선으로 등록 시간 70% 단축**, **세무 신고 준비 기간 75% 단축** 등 비용 절감과 매출 증가를 기록했습니다.
   현재 개인 앱을 개발/운영하며 기획부터 마케팅까지 전 과정을 경험하고 있습니다.
 
@@ -104,6 +103,7 @@ content:
 
       - layout: left
         title: 널리소프트
+        link: https://ssem.kr
         sub_title: 개발팀
         caption: 2022.01 ~ 2022.07 (7개월)
         description: |
