--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ about_content: |
 
   요양 플랫폼(기웅정보통신), 세무 플랫폼(리드넘버, 쌤157), 교육 플랫폼(챔프스터디)에서 **특정 시즌에 집중되는 대규모 트래픽** 환경에서 서버 개발을 진행했습니다.
   다양한 언어와 환경에서 코드를 개선하는 것이 강점으로 그 과정에서 도메인을 빠르게 학습합니다.
-  기획과 소통을 당연하게 생각하며 **회원 등록 프로세스 개선으로 등록 시간 70% 단축**, **세무 신고 준비 기간 75% 단축** 등 비용 절감과 매출 증가를 기록했습니다.
+  기획과 소통을 당연하게 생각하며 **고객 등록 프로세스 개선으로 등록 시간 70% 단축**, **세무 신고 준비 기간 75% 단축** 등 비용 절감과 매출 증가를 기록했습니다.
   현재 개인 앱을 개발/운영하며 기획부터 마케팅까지 전 과정을 경험하고 있습니다.
 
 content:
@@ -118,23 +118,6 @@ content:
           - MSA 환경 관리자용 통합 어드민 시스템 설계/개발
           - 관리자 권한 테이블 설계 및 RBAC 구현
           - 권한 요청/승인 알림 시스템 개발
-
-#  - title: 역량
-#    layout: text
-#    content: |
-#      **레거시 시스템 마이그레이션**
-#      - 기웅정보통신 요양 시스템 (PHP → Java Spring Boot, Vue.js) 전환 (2025)
-#      - 다양한 레거시 환경에서의 점진적 개선 경험
-#
-#      **대용량 데이터 처리 및 자동화**
-#      - 홈택스/배달앱 API 연동 매출 데이터 자동 수집 시스템 구축
-#      - 배치 프로그램을 통한 데이터 검증/전처리 자동화
-#      - 스크래핑 서버 다중화 및 장애 대응 체계 구축
-#
-#      **프로세스 개선을 통한 비용 절감**
-#      - 세무 신고 준비 기간 75% 단축 (4주 → 1주)
-#      - 고객 등록 시간 70% 단축
-#      - 고객 상태 관리 정확도 100% 달성
 
   - title: Projects
     layout: list
